# qmk_user

./: README.md
keyboards/keychron/k8_pro/ansi/white/keymaps/sergiovan/: .gitignore  README.md  behaviour.c  generate.sh  keymap.c  led_matrix_user.inc  quiet_effect.c  quiet_effect.h  rules.mk  sgv_custom_led.c  state_machine.c  state_machine.h  state_machine_gen.py
keyboards/keychron/q6/ansi/keymaps/sergiovan/: animation.c  animation.h  behaviour.c  common.h  keymap.c  rgb_matrix_user.inc  rules.mk  sgv_custom_rgb.c
users/sergiovan/: .clang-format  .gitignore  CMakeLists.txt  rules.mk
users/sergiovan/circular_buffer/: circular_buffer.c  circular_buffer.h
users/sergiovan/noise/: noise_gen.c  noise_gen.h
users/sergiovan/src/: rules.mk
users/sergiovan/src/animation/: animation.c  animation.h
users/sergiovan/src/circular_buffer/: circular_buffer.c  circular_buffer_tests.cpp
users/sergiovan/src/common/: common.h
users/sergiovan/src/noise/: noise_gen.c  noise_gen.h  noise_gen.test.c
